[gd_scene load_steps=12 format=2]

[ext_resource path="res://TextEdit.gd" type="Script" id=1]
[ext_resource path="res://About.gd" type="Script" id=2]
[ext_resource path="res://NeuralCanvas.tscn" type="PackedScene" id=3]
[ext_resource path="res://MainUI.gd" type="Script" id=4]
[ext_resource path="res://NewOutput.tscn" type="PackedScene" id=5]
[ext_resource path="res://NewNeuron.tscn" type="PackedScene" id=6]
[ext_resource path="res://EditNeuron.tscn" type="PackedScene" id=7]
[ext_resource path="res://NewInput.tscn" type="PackedScene" id=8]
[ext_resource path="res://EditOutput.tscn" type="PackedScene" id=9]
[ext_resource path="res://EditInput.tscn" type="PackedScene" id=10]
[ext_resource path="res://Log.gd" type="Script" id=11]

[node name="MainUI" type="Node2D"]
script = ExtResource( 4 )

[node name="Bg" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.584314, 0.247059, 0.690196, 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 10.0
margin_top = 50.0
margin_right = 1260.0
margin_bottom = 675.0
follow_focus = true

[node name="ViewportContainer" type="ViewportContainer" parent="ScrollContainer"]
margin_right = 7000.0
margin_bottom = 625.0
rect_min_size = Vector2( 7000, 625 )
stretch = true

[node name="Viewport" type="Viewport" parent="ScrollContainer/ViewportContainer"]
size = Vector2( 7000, 625 )
handle_input_locally = false
render_target_update_mode = 3

[node name="NeuralCanvas" parent="ScrollContainer/ViewportContainer/Viewport" instance=ExtResource( 3 )]

[node name="Save" type="Button" parent="."]
margin_left = 963.0
margin_top = 10.0
margin_right = 1054.0
margin_bottom = 35.0
text = "Save"
expand_icon = true

[node name="Load" type="Button" parent="."]
margin_left = 1060.0
margin_top = 10.0
margin_right = 1151.0
margin_bottom = 35.0
text = "Load"

[node name="About" type="Button" parent="."]
margin_left = 1176.0
margin_top = 15.0
margin_right = 1267.0
margin_bottom = 35.0
text = "About"
script = ExtResource( 2 )

[node name="Popup" type="Popup" parent="About"]
margin_left = 226.0
margin_top = -53.0
margin_right = 826.0
margin_bottom = 246.0

[node name="ColorRect" type="ColorRect" parent="About/Popup"]
margin_left = -9.0
margin_top = 10.0
margin_right = 608.0
margin_bottom = 299.0
color = Color( 0.843137, 0.839216, 0.839216, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="About/Popup"]
margin_left = 11.0
margin_top = 26.0
margin_right = 598.0
margin_bottom = 87.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "To the maximum extent possible, AllSnapse is licensed under 0BSD. However, AllSnapse is also subject to the licenses of the Godot engine components, so do read the licenses of the components of Godot Engine, and, by extension, AllSnapse, to ensure compliance when distributing. Note that although there is an icon.png mentioned below, that refers to the icon.png originally bundled with Godot. Before you got this program, in places that would have caused the default Godot icon to be displayed by your OS,I replaced it with a custom logo for AllSnapse."

[node name="TextEdit" type="TextEdit" parent="About/Popup"]
margin_left = 19.0
margin_top = 110.0
margin_right = 578.0
margin_bottom = 284.0
readonly = true
script = ExtResource( 1 )

[node name="Edit" type="Button" parent="."]
margin_left = 670.0
margin_top = 10.0
margin_right = 761.0
margin_bottom = 35.0
text = "Edit"

[node name="Start" type="Button" parent="."]
margin_left = 185.0
margin_top = 688.0
margin_right = 308.0
margin_bottom = 711.0
text = "Start Simulation"

[node name="Pause" type="Button" parent="."]
margin_left = 323.0
margin_top = 688.0
margin_right = 446.0
margin_bottom = 711.0
text = "Pause Simulation"

[node name="Delete" type="Button" parent="."]
margin_left = 765.0
margin_top = 10.0
margin_right = 856.0
margin_bottom = 35.0
text = "Delete"

[node name="StepTime" type="TextEdit" parent="."]
margin_left = 1085.0
margin_top = 682.0
margin_right = 1222.0
margin_bottom = 706.0
text = "1"

[node name="StepTimeLabel" type="RichTextLabel" parent="."]
margin_left = 1008.0
margin_top = 686.0
margin_right = 1083.0
margin_bottom = 709.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Step Time:"

[node name="Clear" type="Button" parent="."]
margin_left = 858.0
margin_top = 10.0
margin_right = 949.0
margin_bottom = 35.0
text = "Clear"

[node name="Connect" type="Button" parent="."]
margin_left = 442.0
margin_top = 11.0
margin_right = 533.0
margin_bottom = 36.0
text = "Connect"

[node name="Reset" type="Button" parent="."]
margin_left = 49.0
margin_top = 688.0
margin_right = 172.0
margin_bottom = 711.0
text = "Reset Simulation"

[node name="Input" type="Button" parent="."]
margin_left = 115.0
margin_top = 10.0
margin_right = 206.0
margin_bottom = 35.0
text = "New Input"

[node name="New" type="Button" parent="."]
margin_left = 17.0
margin_top = 10.0
margin_right = 108.0
margin_bottom = 35.0
text = "New Neuron"
expand_icon = true

[node name="Output" type="Button" parent="."]
margin_left = 215.0
margin_top = 10.0
margin_right = 306.0
margin_bottom = 35.0
text = "New Output"

[node name="Disconnect" type="Button" parent="."]
margin_left = 539.0
margin_top = 10.0
margin_right = 630.0
margin_bottom = 35.0
text = "Disconnect"

[node name="InputPopup" type="Popup" parent="."]
margin_right = 40.0
margin_bottom = 40.0
popup_exclusive = true

[node name="NewInput" parent="InputPopup" instance=ExtResource( 8 )]

[node name="EditInputPopup" type="Popup" parent="."]
margin_right = 40.0
margin_bottom = 40.0
popup_exclusive = true

[node name="EditInput" parent="EditInputPopup" instance=ExtResource( 10 )]

[node name="NewPopup" type="Popup" parent="."]
margin_right = 40.0
margin_bottom = 40.0
popup_exclusive = true

[node name="NewNeuron" parent="NewPopup" instance=ExtResource( 6 )]

[node name="EditNeuronPopup" type="Popup" parent="."]
margin_right = 40.0
margin_bottom = 40.0
popup_exclusive = true

[node name="EditNeuron" parent="EditNeuronPopup" instance=ExtResource( 7 )]

[node name="OutputPopup" type="Popup" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="NewOutput" parent="OutputPopup" instance=ExtResource( 5 )]

[node name="EditOutputPopup" type="Popup" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="EditOutput" parent="EditOutputPopup" instance=ExtResource( 9 )]

[node name="Duplicate" type="Button" parent="."]
margin_left = 345.0
margin_top = 10.0
margin_right = 436.0
margin_bottom = 35.0
text = "Duplicate"

[node name="SaveDialog" type="FileDialog" parent="."]
margin_left = 9.0
margin_top = 426.0
margin_right = 324.0
margin_bottom = 556.0
window_title = "Save SN P Network File"
access = 2

[node name="LoadDialog" type="FileDialog" parent="."]
margin_left = 9.0
margin_top = 426.0
margin_right = 324.0
margin_bottom = 556.0
window_title = "Open a File"
mode = 0
access = 2

[node name="DisablePopup" type="Popup" parent="."]
margin_left = 240.0
margin_top = 160.0
margin_right = 845.0
margin_bottom = 461.0

[node name="Bg" type="ColorRect" parent="DisablePopup"]
margin_left = 1.0
margin_top = 1.0
margin_right = 606.0
margin_bottom = 302.0
color = Color( 0.878431, 0.564706, 0.0823529, 1 )

[node name="Label" type="Label" parent="DisablePopup"]
margin_left = 40.0
margin_top = 28.0
margin_right = 389.0
margin_bottom = 152.0
rect_scale = Vector2( 1.5, 1.5 )
size_flags_vertical = 5
text = "All upper toolbar buttons other than About are disabled while the simulation is ongoing.


To regain access to them, reset the simulation."
autowrap = true

[node name="StillSimulating" type="Popup" parent="."]
margin_left = 240.0
margin_top = 160.0
margin_right = 845.0
margin_bottom = 461.0

[node name="Bg" type="ColorRect" parent="StillSimulating"]
margin_left = 1.0
margin_top = 1.0
margin_right = 606.0
margin_bottom = 302.0
color = Color( 0.878431, 0.564706, 0.0823529, 1 )

[node name="Label" type="Label" parent="StillSimulating"]
margin_left = 40.0
margin_top = 28.0
margin_right = 389.0
margin_bottom = 152.0
rect_scale = Vector2( 1.5, 1.5 )
size_flags_vertical = 5
text = "Reset the simulation before starting a new one!"
autowrap = true

[node name="NotYetSimulating" type="Popup" parent="."]
margin_left = 240.0
margin_top = 160.0
margin_right = 845.0
margin_bottom = 461.0

[node name="Bg" type="ColorRect" parent="NotYetSimulating"]
margin_left = 1.0
margin_top = 1.0
margin_right = 606.0
margin_bottom = 302.0
color = Color( 0.878431, 0.564706, 0.0823529, 1 )

[node name="Label" type="Label" parent="NotYetSimulating"]
margin_left = 40.0
margin_top = 28.0
margin_right = 389.0
margin_bottom = 152.0
rect_scale = Vector2( 1.5, 1.5 )
size_flags_vertical = 5
text = "Cannot pause simulation if simulation has not yet begun"
autowrap = true

[node name="InvalidFilePopup" type="Popup" parent="."]
margin_left = 240.0
margin_top = 160.0
margin_right = 845.0
margin_bottom = 461.0

[node name="Bg" type="ColorRect" parent="InvalidFilePopup"]
margin_left = 1.0
margin_top = 1.0
margin_right = 606.0
margin_bottom = 302.0
color = Color( 0.878431, 0.564706, 0.0823529, 1 )

[node name="Label" type="Label" parent="InvalidFilePopup"]
margin_left = 40.0
margin_top = 28.0
margin_right = 389.0
margin_bottom = 152.0
rect_scale = Vector2( 1.5, 1.5 )
size_flags_vertical = 5
text = "Could not load file, either because it is corrupt, or it's format is not compatible with AllSnapse"
autowrap = true

[node name="Simulating" type="Label" parent="."]
margin_left = 670.0
margin_top = 688.0
margin_right = 782.0
margin_bottom = 702.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Simulation Mode:"

[node name="Indicator" type="ColorRect" parent="."]
margin_left = 789.0
margin_top = 676.0
margin_right = 829.0
margin_bottom = 716.0
color = Color( 1, 0, 0, 1 )

[node name="ViewLog" type="Button" parent="."]
margin_left = 460.0
margin_top = 688.0
margin_right = 583.0
margin_bottom = 711.0
text = "View Log"

[node name="Log" type="Popup" parent="."]
margin_left = 119.0
margin_top = 42.0
margin_right = 1247.0
margin_bottom = 629.0
popup_exclusive = true
script = ExtResource( 11 )

[node name="ColorRect" type="ColorRect" parent="Log"]
margin_right = 1128.0
margin_bottom = 587.0

[node name="Log" type="TextEdit" parent="Log"]
margin_left = 20.0
margin_top = 22.0
margin_right = 1113.0
margin_bottom = 545.0
readonly = true

[node name="Export" type="Button" parent="Log"]
margin_left = 979.0
margin_top = 557.0
margin_right = 1103.0
margin_bottom = 579.0
text = "Export Log"

[node name="Close Log" type="Button" parent="Log"]
margin_left = 679.0
margin_top = 557.0
margin_right = 803.0
margin_bottom = 579.0
text = "Close Log"

[node name="ExportDialog" type="FileDialog" parent="Log"]
margin_left = 184.0
margin_top = 108.0
margin_right = 915.0
margin_bottom = 430.0
access = 2

[connection signal="pressed" from="Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="About" to="About" method="_on_About_pressed"]
[connection signal="popup_hide" from="About/Popup" to="." method="_on_Popup_popup_hide"]
[connection signal="pressed" from="Edit" to="." method="_on_Edit_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="Delete" to="." method="_on_Delete_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_Clear_pressed"]
[connection signal="pressed" from="Connect" to="." method="_on_Connect_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="Input" to="." method="_on_Input_pressed"]
[connection signal="pressed" from="New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="Output" to="." method="_on_Output_pressed"]
[connection signal="pressed" from="Disconnect" to="." method="_on_Disconnect_pressed"]
[connection signal="pressed" from="Duplicate" to="." method="_on_Duplicate_pressed"]
[connection signal="file_selected" from="SaveDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="popup_hide" from="SaveDialog" to="." method="_on_SaveDialog_popup_hide"]
[connection signal="file_selected" from="LoadDialog" to="." method="_on_LoadDialog_file_selected"]
[connection signal="popup_hide" from="LoadDialog" to="." method="_on_LoadDialog_popup_hide"]
[connection signal="pressed" from="ViewLog" to="." method="_on_ViewLog_pressed"]
[connection signal="popup_hide" from="Log" to="." method="_on_Log_popup_hide"]
[connection signal="pressed" from="Log/Export" to="Log" method="_on_Export_pressed"]
[connection signal="pressed" from="Log/Close Log" to="Log" method="_on_Close_Log_pressed"]
[connection signal="file_selected" from="Log/ExportDialog" to="Log" method="_on_ExportDialog_file_selected"]
